--- a/SugarRestSharpSolution/SugarRestSharp/packages.config
+++ b/SugarRestSharpSolution/SugarRestSharp/packages.config
@@ -1,6 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
-  <package id="StyleCop.MSBuild" version="4.7.54.0" targetFramework="net45" developmentDependency="true" />
+  <package id="FubarCoder.RestSharp.Portable" version="3.3.0" targetFramework="portable45-net45+win8" />
+  <package id="FubarCoder.RestSharp.Portable.Core" version="4.0.8" targetFramework="portable45-net45+win8" />
+  <package id="FubarCoder.RestSharp.Portable.HttpClient" version="4.0.8" targetFramework="portable45-net45+win8" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable45-net45+win8" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+win8" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8" />
+  <package id="PCLCrypto" version="2.0.147" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.BCrypt" version="0.5.64" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.Kernel32" version="0.5.64" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.NCrypt" version="0.5.64" targetFramework="portable45-net45+win8" />
+  <package id="PInvoke.Windows.Core" version="0.5.64" targetFramework="portable45-net45+win8" />
+  <package id="StyleCop.MSBuild" version="4.7.55.0" targetFramework="portable45-net45+win8" developmentDependency="true" />
+  <package id="Validation" version="2.4.15" targetFramework="portable45-net45+win8" />
 </packages>
